--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,31 +1,40 @@
 
 h2 {
-  height: 45px;
-  line-height: 50px;
+  /*font-size: 99px;*/
+  height: 20px;
+  line-height: 0px;
   text-align: left;
   width: 100%;
   font-family: 'Roboto condensed', sans-serif;
   font-size: xx-large;
   font-weight: 900;
-  color: #003e08;
-  border-bottom: 1px solid black; }
+  color: black;
+  border-bottom: 1px solid black; 
+  }
 
 .new-tweet {
   margin-top: 50px;
-  background-color: #dedede;
+  background: linear-gradient(360deg, darkslateblue, silver);
   border: 1px ;
   padding: 9px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 0.5px 0.5px; }
+  border-radius: 25px 25px 15px 15px;
+  box-shadow: 0px 5px 15px 5px;
+  opacity: 0.75; 
+  }
+
+  .new-tweet:hover {
+    opacity: 1;
+    box-shadow: 0px 3px 30px 10px;
+  }
 
 .new-tweet form textarea {
   width: 100%;
-  padding: 5px 0.4em; }
+  padding: 5px 0.4em; 
+  }
 
 .new-tweet form span {
   position: relative;
   text-align: right;
   left: 315px;
-  font-size: small; }
-
-}
+  font-size: small; 
+  }
